--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ html {
     height: 100%;
     overflow: hidden;
     cursor: url("images/Arrow.cur"),pointer;
+    -webkit-tap-highlight-color:rgba(0,0,0,0);
 }
 
 body {
