--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ canvas{
 }
 
 .center-panel {
-    margin: 3vw auto;
+    margin: 2vh auto;
     width: 70vw;
     min-width: 800px;
     max-width: 1100px;
@@ -121,8 +121,8 @@ canvas{
     color: white;
     margin: 0 auto;
     width: 80%;
-    border-radius: 15px;
-    background-color: rgba(143, 143, 143, 0.1);
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.1);
     -webkit-transition-duration: 0.2s;
 }
 
@@ -141,7 +141,7 @@ canvas{
     border-style: solid;
     border-color: orange;
     border-width: 3px;
-    border-radius: 16px;
+    border-radius: 3px;
     outline: none;
     background-color: rgba(255, 255, 255, 0);
     cursor: url("images/IBeam.cur"),text;
@@ -149,14 +149,13 @@ canvas{
 
 .calendar {
     font-size: 18px;
-    height: 230px;
-    width: 30%;
-    margin-left: 10%;
-    margin-right: 10px;
-    margin-top: 15px;
-    padding: 15px;
+    min-height: 300px;
+    max-height: 350px;
+    width: 28%;
+    margin-right: 7px;
+    padding: 5px;
     background-color: rgba(255, 151, 66, 0.8);
-    border-radius: 25px;
+    border-radius: 10px;
     box-shadow: rgba(66, 66, 66, 0.3) 0px 0px 2px 2px;
     -webkit-transition-duration: 0.2s;
 }
@@ -173,17 +172,20 @@ canvas{
 }
 
 .inline-panel {
+    margin:  10px auto;
     display: flex;
+    justify-content: center;
 }
 
 .search-history-panel {
     font-size: 18px;
-    min-height: 230px;
-    width: 43%;
-    margin-top: 15px;
-    padding: 15px;
+    width: 48%;
+    margin-left: 7px;
+    padding: 5px;
+    min-height: 300px;
+    max-height: 350px;
     background-color: rgba(255, 86, 86, 0.8);
-    border-radius: 25px;
+    border-radius: 10px;
     box-shadow: rgba(66, 66, 66, 0.3) 0px 0px 2px 2px;
     -webkit-transition-duration: 0.2s;
 }
@@ -196,30 +198,65 @@ canvas{
 .favo-websites {
     margin: 5px;
     padding: 5px;
-    border-radius: 15px;
+    border-radius: 5px;
     background-color: rgba(255, 255, 255, 0.1);
-    min-height: 75%;
-    max-width: 93%;
-    width: 93%;
     word-wrap:break-word; 
     word-break:break-all; 
-    /* overflow: hidden; */
     display: flex;
     flex-wrap: wrap;
+    box-shadow: rgba(66, 66, 66, 0.3) 0px 0px 3px 3px inset;
+}
+
+.hot-websites {
+    margin: 5px;
+    padding: 3px;
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.1);
+    height: 88%;
+    width:96%;
+    box-shadow: rgba(66, 66, 66, 0.3) 0px 0px 3px 3px inset;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+.hot-item {
+    text-align: left;
+    padding: 5px;
+    margin: 0;
+    width: 99%;
+    height: 25px;
+    overflow: hidden;
+    background-color: rgba(136, 136, 136, 0.2);
+    box-shadow: rgba(66, 66, 66, 0.3) 1px 1px 1px 1px;
+    cursor: url("images/Hand.cur"),pointer;
+    transition: 0.2s;
+}
+
+.hot-item:hover {
+    background-color: rgba(196, 196, 196, 0.01);
+    box-shadow: rgba(66, 66, 66, 0.3) 2px 2px 4px 4px;
+}
+.hot-item:active {
+    box-shadow: rgba(66, 66, 66, 0.3) 1px 1px 1px 1px;
+}
+
+.hot-title {
+    text-decoration: none;
+    cursor: url("images/Hand.cur"),pointer;
 }
 
 .website-icon {
-    align-self: center;
-    margin: 7px;
     height: 32px;
     width: 32px;
     border-radius: 50%;
-    background: url("images/add.png") no-repeat;
-    background-size:contain;
-
+    background: url("images/websites.png") no-repeat;
+    background-size:cover;
+    margin: 5px auto;
 }
 
 .website-a {
+    margin: 0;
+    padding: 0;
     outline: none;
     font-size: 16px;
     text-decoration: none;
@@ -238,11 +275,14 @@ a {
     align-content: center;
     margin: 3px;
     padding: 2px;
-    height: fit-content;
+    min-height: fit-content;
+    max-height: 60px;
+    overflow: hidden;
+    display: inline-flex;
     width: fit-content;
+    min-width: 80px;
     border-radius: 5px;
     cursor: url("images/Hand.cur"),pointer;
-    -webkit-transition-duration: 0.1s;
 }
 
 .website:hover {
@@ -253,16 +293,66 @@ a {
     transform: scale(0.9);
 }
 
+.remove-website {
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-top: 20px solid transparent;
+    border-bottom: 20px solid transparent;
+    border-left: 30px solid #e70c0c73;
+    border-radius: 50%;
+    transform: translate(0 , -30px) rotate(-45deg);
+    text-align: left;
+    color: #FFFFFF;
+    right: -15px;
+    top: 10px;
+}
+
+.remove-website:after{
+    content: '+';
+    color: #ffffff;
+    position: absolute;
+    left: -30px;
+    bottom: -13px;
+}
+
+.recent-website {
+    z-index: 0;
+    margin: 3px;
+    padding: 0;
+    justify-content: center;
+    height: 65px;
+    width: 45px;
+    overflow: hidden;
+    cursor: url("images/Hand.cur"),pointer;
+    position: relative;
+    overflow: hidden;
+    background-color: rgba(255, 200, 200, 0.3);
+    box-shadow: rgba(66, 66, 66, 0.3) 1px 1px 1px 1px;
+    transition: 0.2s;
+}
+
+.recent-website:hover {
+    background-color: rgba(255, 200, 200, 0.3);
+    box-shadow: rgba(66, 66, 66, 0.3) 1px 1px 2px 2px;
+}
+
+.recent-website:active {
+    transform: scale(0.9);
+}
+
 .standard-website-panel {
     font-size: 21px;
-    margin: 15px;
+    margin: 7px;
     padding: 15px;
-    min-width: 77%;
+    width: 36%;
+    height: 230px;
+    overflow-y: auto;
     background-color: rgba(131, 42, 42, 0.7);
     border-radius: 25px;
     box-shadow: rgba(66, 66, 66, 0.3) 0px 0px 2px 2px;
     -webkit-transition-duration: 0.2s;
-    border-radius: 15px;
+    border-radius: 10px;
     object-fit: contain;
     display: inline-block;
 }
@@ -279,6 +369,8 @@ a {
 table {
     margin: auto;
     width: 100%;
+    justify-content: center;
+    text-align: center;
 }
 
 .deleteWebsites {
@@ -307,4 +399,13 @@ table {
 
 .test {
     color: rgb(51, 255, 0);
+}
+
+footer {
+    text-align: center;
+    font-size: 11px;
+}
+
+.s-sticker {
+    z-index: 1999999;
 }
