--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-    background-color: rgb(213, 255, 196);
+    background-color: rgb(219, 215, 198);
     width: 100%;
     height: 100%;
     overflow: hidden;
@@ -139,7 +139,7 @@ canvas{
     height: 28px;
     width: 80%;
     border-style: solid;
-    border-color: orange;
+    border-color: rgba(255, 166, 0, 0.7);
     border-width: 3px;
     border-radius: 3px;
     outline: none;
@@ -154,14 +154,14 @@ canvas{
     width: 28%;
     margin-right: 7px;
     padding: 5px;
-    background-color: rgba(255, 151, 66, 0.8);
+    background-color: rgba(110, 110, 110, 0.8);
     border-radius: 10px;
     box-shadow: rgba(66, 66, 66, 0.3) 0px 0px 2px 2px;
     -webkit-transition-duration: 0.2s;
 }
 
 .calendar:hover {
-    background-color: rgba(255, 151, 66, 1);
+    background-color: rgba(110, 110, 110, 1);
     box-shadow: rgba(66, 66, 66, 0.5) 0px 0px 4px 4px;
 }
 
@@ -184,14 +184,14 @@ canvas{
     padding: 5px;
     min-height: 300px;
     max-height: 350px;
-    background-color: rgba(255, 86, 86, 0.8);
+    background-color: rgba(110, 110, 110, 0.8);
     border-radius: 10px;
     box-shadow: rgba(66, 66, 66, 0.3) 0px 0px 2px 2px;
     -webkit-transition-duration: 0.2s;
 }
 
 .search-history-panel:hover {
-    background-color: rgba(255, 86, 86, 1);
+    background-color: rgba(110, 110, 110, 1);
     box-shadow: rgba(66, 66, 66, 0.5) 0px 0px 4px 4px;
 }
 
@@ -221,10 +221,10 @@ canvas{
 
 .hot-item {
     text-align: left;
+    font-size: 14px;
     padding: 5px;
     margin: 0;
     width: 99%;
-    height: 25px;
     overflow: hidden;
     background-color: rgba(136, 136, 136, 0.2);
     box-shadow: rgba(66, 66, 66, 0.3) 1px 1px 1px 1px;
@@ -255,7 +255,7 @@ canvas{
 }
 
 .website-a {
-    margin: 0;
+    margin:  0 auto;
     padding: 0;
     outline: none;
     font-size: 16px;
@@ -271,8 +271,6 @@ a {
 
 .website {
     color: inherit;
-    text-align: center;
-    align-content: center;
     margin: 3px;
     padding: 2px;
     min-height: fit-content;
@@ -281,16 +279,17 @@ a {
     display: inline-flex;
     width: fit-content;
     min-width: 80px;
-    border-radius: 5px;
+    border-radius: 3px;
     cursor: url("images/Hand.cur"),pointer;
 }
 
 .website:hover {
+    box-shadow: inset 0px 0px 2px 2px  rgba(0,0,0,0.1);
     background-color: rgba(255, 200, 200, 0.3);
 }
 
 .website:active {
-    transform: scale(0.9);
+    box-shadow: inset 0px 0px 3px 3px rgba(0,0,0,0.2);
 }
 
 .remove-website {
@@ -348,7 +347,7 @@ a {
     width: 36%;
     height: 230px;
     overflow-y: auto;
-    background-color: rgba(131, 42, 42, 0.7);
+    background-color: rgba(170, 170, 170, 0.55);
     border-radius: 25px;
     box-shadow: rgba(66, 66, 66, 0.3) 0px 0px 2px 2px;
     -webkit-transition-duration: 0.2s;
