--- a/style.css
+++ b/style.css
@@ -408,3 +408,8 @@ footer {
 .s-sticker {
     z-index: 1999999;
 }
+
+input:-webkit-autofill {
+    -webkit-text-fill-color: #ffffff !important;
+    transition: background-color 5000s ease-in-out 0s;
+}
