--- a/window.css
+++ b/window.css
@@ -65,6 +65,7 @@
     font-size: 20px;
     width: 60%;
     max-width: 850px;
+    min-width: 620px;
     max-height: 1000px;
     height: 85%;
     margin:auto;
@@ -286,3 +287,29 @@ label {
 #userLogin {
     display: inline-flexbox;
 }
+
+.switch-btn {position: relative; display: block;margin: auto 0; vertical-align: middle; width: 35px; height: 18px; border-radius: 18px; cursor: url("images/Hand.cur"),pointer;}
+.checked-switch {position: absolute; top: 0; left: 2px; opacity: 0;}
+.text-switch {background-color: #ed5b49; border: 1px solid #d2402e; border-radius: inherit; color: #fff; display: block; font-size: 15px; height: inherit; position: relative; text-transform: uppercase;}
+.text-switch:before, .text-switch:after {position: absolute; top: 50%; margin-top: -.5em; line-height: 1; -webkit-transition: inherit; -moz-transition: inherit; -o-transition: inherit; transition: inherit;}
+.checked-switch:checked ~ .text-switch {background-color: #00af2c; border: 1px solid #068506;}
+.checked-switch:checked ~ .text-switch:before {opacity: 0;}
+.checked-switch:checked ~ .text-switch:after {opacity: 1;}
+.toggle-btn {background: linear-gradient(#eee, #fafafa); border-radius: 100%; height: 17px; left: 1px; position: absolute; top: 1px; width: 17px;}
+/* .toggle-btn::before {color: #aaaaaa; content: "|||"; display: inline-block; font-size: 5px; letter-spacing: -2px; vertical-align: middle;} */
+.checked-switch:checked ~ .toggle-btn {top: 1px;left: 16px;}
+ .text-switch, .toggle-btn {transition: All 0.3s ease; -webkit-transition: All 0.3s ease; -moz-transition: All 0.3s ease; -o-transition: All 0.3s ease;}
+
+
+ /* 缩小版 */
+ .switch-btnS {position: relative; display: block;margin: auto 0; vertical-align: middle; width: 30px; height: 2px; border-radius: 18px; cursor: url("images/Hand.cur"),pointer;}
+ .checked-switchS {position: absolute; top: 0; left: 1px; opacity: 0;}
+ .text-switchS {background-color: #ed5b49; border: 1px solid #d2402e; border-radius: inherit; color: #fff; display: block; font-size: 15px; height: inherit; position: relative; text-transform: uppercase;}
+ .text-switchS:before, .text-switchS:after {position: absolute; top: 50%; margin-top: -.5em; line-height: 1; -webkit-transition: inherit; -moz-transition: inherit; -o-transition: inherit; transition: inherit;}
+ .checked-switchS:checked ~ .text-switchS {background-color: #00af2c; border: 1px solid #068506;}
+ .checked-switchS:checked ~ .text-switchS:before {opacity: 0;}
+ .checked-switchS:checked ~ .text-switchS:after {opacity: 1;}
+ .toggle-btnS {background: linear-gradient(#eee, #fafafa); border-radius: 100%; height: 14px; left: -1px; position: absolute; top: -5px; width: 14px;}
+ /* .toggle-btn::before {color: #aaaaaa; content: "|||"; display: inline-block; font-size: 5px; letter-spacing: -2px; vertical-align: middle;} */
+ .checked-switchS:checked ~ .toggle-btnS {top: -5px;left: 16px;}
+  .text-switchS, .toggle-btnS {transition: All 0.3s ease; -webkit-transition: All 0.3s ease; -moz-transition: All 0.3s ease; -o-transition: All 0.3s ease;}
