--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ canvas{
 .search-panel {
     color: white;
     margin: 0 auto;
-    width: 80%;
+    width: 85%;
     border-radius: 5px;
     background-color: rgba(255, 255, 255, 0.1);
     -webkit-transition-duration: 0.2s;
@@ -151,7 +151,7 @@ canvas{
     font-size: 18px;
     min-height: 300px;
     max-height: 350px;
-    width: 28%;
+    width: 30%;
     margin-right: 7px;
     padding: 5px;
     background-color: rgba(110, 110, 110, 0.8);
@@ -177,18 +177,7 @@ canvas{
     justify-content: center;
 }
 
-.search-history-panel {
-    font-size: 18px;
-    width: 48%;
-    margin-left: 7px;
-    padding: 5px;
-    min-height: 300px;
-    max-height: 350px;
-    background-color: rgba(110, 110, 110, 0.8);
-    border-radius: 10px;
-    box-shadow: rgba(66, 66, 66, 0.3) 0px 0px 2px 2px;
-    -webkit-transition-duration: 0.2s;
-}
+
 
 .search-history-panel:hover {
     background-color: rgba(110, 110, 110, 1);
@@ -208,12 +197,12 @@ canvas{
 }
 
 .hot-websites {
-    margin: 5px;
+    margin: 5px auto;
     padding: 3px;
     border-radius: 5px;
     background-color: rgba(255, 255, 255, 0.1);
     height: 88%;
-    width:96%;
+    width:97%;
     box-shadow: rgba(66, 66, 66, 0.3) 0px 0px 3px 3px inset;
     overflow-x: hidden;
     overflow-y: auto;
@@ -267,20 +256,6 @@ canvas{
 
 a {
     color: inherit;
-}
-
-.website {
-    color: inherit;
-    margin: 3px;
-    padding: 2px;
-    min-height: fit-content;
-    max-height: 60px;
-    overflow: hidden;
-    display: inline-flex;
-    width: fit-content;
-    min-width: 80px;
-    border-radius: 3px;
-    cursor: url("images/Hand.cur"),pointer;
 }
 
 .website:hover {
@@ -340,20 +315,100 @@ a {
     transform: scale(0.9);
 }
 
-.standard-website-panel {
-    font-size: 21px;
-    margin: 7px;
-    padding: 15px;
-    width: 36%;
-    height: 230px;
-    overflow-y: auto;
-    background-color: rgba(170, 170, 170, 0.55);
-    border-radius: 25px;
-    box-shadow: rgba(66, 66, 66, 0.3) 0px 0px 2px 2px;
-    -webkit-transition-duration: 0.2s;
-    border-radius: 10px;
-    object-fit: contain;
-    display: inline-block;
+@media screen and (min-width: 1550px) {
+    .search-history-panel {
+        font-size: 18px;
+        width: 50%;
+        margin-left: 7px;
+        align-content: center;
+        padding: 5px;
+        min-height: 300px;
+        max-height: 350px;
+        background-color: rgba(110, 110, 110, 0.8);
+        border-radius: 10px;
+        box-shadow: rgba(66, 66, 66, 0.3) 0px 0px 2px 2px;
+        -webkit-transition-duration: 0.2s;
+    }
+
+    .website {
+        color: inherit;
+        margin: 0;
+        padding: 2px;
+        min-height: fit-content;
+        max-height: 53px;
+        overflow: hidden;
+        display: inline-flex;
+        width: fit-content;
+        min-width: 80px;
+        max-width: 85px;
+        word-wrap: normal;
+        word-break: break-all;
+        border-radius: 3px;
+        cursor: url("images/Hand.cur"),pointer;
+    }
+
+    .standard-website-panel {
+        font-size: 21px;
+        margin: 2.5px 5px;
+        padding: 10px 3px;
+        width: 37%;
+        max-width: 290px;
+        height: 235px;
+        overflow-y: auto;
+        background-color: rgba(170, 170, 170, 0.55);
+        border-radius: 25px;
+        box-shadow: rgba(66, 66, 66, 0.3) 0px 0px 2px 2px;
+        -webkit-transition-duration: 0.2s;
+        border-radius: 10px;
+        object-fit: contain;
+        display: inline-block;
+    }
+}
+
+@media screen and (max-width: 1549px) {
+    .search-history-panel {
+        font-size: 18px;
+        align-content: center;
+        width: 46%;
+        margin-left: 7px;
+        padding: 5px;
+        min-height: 300px;
+        max-height: 350px;
+        background-color: rgba(110, 110, 110, 0.8);
+        border-radius: 10px;
+        box-shadow: rgba(66, 66, 66, 0.3) 0px 0px 2px 2px;
+        -webkit-transition-duration: 0.2s;
+    }
+
+    .website {
+        color: inherit;
+        margin: 3px;
+        padding: 2px;
+        min-height: fit-content;
+        max-height: 60px;
+        overflow: hidden;
+        display: inline-flex;
+        width: fit-content;
+        min-width: 80px;
+        border-radius: 3px;
+        cursor: url("images/Hand.cur"),pointer;
+    }
+
+    .standard-website-panel {
+        font-size: 21px;
+        margin: 2.5px 5px;
+        padding: 10px;
+        width: 37%;
+        height: 235px;
+        overflow-y: auto;
+        background-color: rgba(170, 170, 170, 0.55);
+        border-radius: 25px;
+        box-shadow: rgba(66, 66, 66, 0.3) 0px 0px 2px 2px;
+        -webkit-transition-duration: 0.2s;
+        border-radius: 10px;
+        object-fit: contain;
+        display: inline-block;
+    }
 }
 
 .standard-website-panel:hover {
@@ -366,7 +421,7 @@ a {
 }
 
 table {
-    margin: auto;
+    margin: 0 auto;
     width: 100%;
     justify-content: center;
     text-align: center;
